[package]
name = "RustyToDo"
version = "0.1.0"
authors = ["another-danny <dave.ancor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
console =  { git = "https://github.com/mitsuhiko/console" }